# federation

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  askama.toml  docker-compose.yml  docker-entrypoint.sh  plan.md  research.md  spec.md  tailwind.config.js
.github/workflows/: test.yml
config/: README.md  feeds.yaml
docs/plans/: 2025-12-29-recipe-jsonld-design.md  2025-12-29-recipe-jsonld-implementation.md  2026-01-15-feed-validation-design.md  2026-07-12-recipe-locale-implementation.md
docs/superpowers/specs/: 2026-07-12-recipe-locale-design.md
migrations/: 001_init.sql  002_performance_indices.sql  003_github_integration.sql  004_feed_config_source.sql  005_composite_indices.sql  006_add_content_hash.sql  007_recipe_content_caching.sql  008_recipe_locale.sql
scripts/: README.md  build.sh  dev.sh  download-tailwind.sh  find-cooklang-repos.py
src/: error.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs
src/cli/: commands.rs  mod.rs
src/config/: feeds.rs  mod.rs  sync.rs
src/crawler/: fetcher.rs  mod.rs  parser.rs  scheduler.rs
src/db/: feeds.rs  github.rs  ingredients.rs  mod.rs  models.rs  recipes.rs  tags.rs
src/github/: client.rs  config.rs  indexer.rs  mod.rs  models.rs  parser.rs  rate_limiter.rs  scheduler.rs
src/indexer/: cooklang_parser.rs  locale.rs  mod.rs  recipe.rs  schema.rs  search.rs
src/utils/: feed_validation.rs  mod.rs  sanitize.rs  validation.rs
src/web/: handlers.rs  mod.rs  schema.rs
src/web/static/css/: recipe.css
src/web/templates/: about.html  base.html  browse.html  feed_recipes.html  feeds.html  recipe.html  search.html  validate.html
styles/: input.css
tests/: conditional_request_test.rs  crawler_tests.rs  deduplication_test.rs  locale_test.rs  parser_integration_test.rs  quick_parser_test.rs  reindex_test.rs
tests/fixtures/: sample_feed.xml  sample_recipe.cook
