[package]
name = "federation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "federation"
path = "src/main.rs"

[lib]
name = "federation"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = [
    "rt-multi-thread",  # Multi-threaded runtime
    "macros",           # #[tokio::main] and #[tokio::test]
    "time",             # tokio::time (sleep, interval)
    "net",              # tokio::net (TcpListener)
    "fs",               # tokio::fs (file operations)
    "io-util",          # tokio::io utilities
    "sync",             # tokio::sync (Mutex, RwLock, channels)
] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip", "limit", "set-header"] }
tower_governor = "0.4"
tower-cookies = "0.10"

# Feed parsing
feed-rs = "2.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
futures = "0.3"

# Search
tantivy = "0.22"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "migrate"] }

# Cooklang parsing
cooklang = { version = "0.17.1", default-features = false, features = ["aisle", "pantry"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Templates
askama = "0.12"
askama_axum = "0.4"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
url = "2.5"
urlencoding = "2.1"
ammonia = "4.0"
regex = "1.10"
dotenvy = "0.15"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.0"
